--- a/index.html
+++ b/index.html
@@ -4,19 +4,38 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Protest+Guerrilla&display=swap" rel="stylesheet">
 </head>
 <link rel="stylesheet" href="style.css">
 <body>
-    <p><b> <img src="bulka.jpeg" width="350" align="right">BUŁKI</b></p>
-   <p> Uwielbiam spożywać bułki. Cenię w nich ich różnorodność i uniwersalność spożycia. Moim ulubionym posiłkiem spożywanym w ciągu dnia jest drugie śniadanie, kiedy jem bułkę. Peferuję bułki śniadaniowe z Biedronki, które kupuję codziennie - od poniedziałku do piątku przed lekcjami. Bułki śniadaniowe są moim ulubionym rodzajem bułek, ponieważ są idealnych rozmiarów. Zawsze są świeże, zewnętrzna część bułki jest chrupiąca, a środek - miękki i delikatny. Najczęsniej jem je bez żadnych dodatków, gdyż nie mam czasu codziennie przygotowywać sobie kanapek do szkoły, jednakże sama 'sucha' bułka jest bardzo smaczna i pożywna. Zawiera w sobie wszystkie własicwości odżywcze potrzebne mi do zdrowego funkcjonowania. Jednak gdy zamierzam zjeśc kanapke to robie ją z sałatą, majonezem i jajkiem. Uważam, że wszystkie kombinacje dodatków, z którymi można zrobić kanapkę są bardzo smaczne. Bułki, jak i kanapki maja ogromną różnorodność, co ogromnie w nich cenię. Powszechnie wiadome jest, że każdy ma jakieś wymagania do nich: niektórzy wolą zwykłe kajzerki, innym zalezy na urozmaiceniu ich przez np. dodanie ziaren lub posypanie makiem. daję sobie sprawę, że istnieją też inne rodzaje pieczywa: croissanty, różnego rodzaju drożdżowki, chleby, ale moim zdaniem to właśnie bułki są tym podstawowym, najbardziej urozmaiconym rodzajem. Bułki można spozywać na zimno, ciepło, słodko, słono albo jakkolwiek się chce. Bułka może psłuzyć jako deser (kajzerka z nutellą), drugie śniadanie (sucha bułka śniadaniowa), kolacja (bułka wieloziarnista z łososiem i awokado) albo nawet jako element obiadu (bułkka tarta).</p>
 
-    <p>Czasami sama piekę bułki, gdyż jak zrobimy coś samemu to moim zdaniem jeszcze kepiej to smakuje. To mój nieautorski przepis na bułki kajzerki: Składniki: -500g zwykłej pszennej mąki -10g soli -10g cukru -7g suchych drożdży -300ml wody -1 jajko -1 łyżka mleka -nasiona lub ziarna (opcjonalnie) Instrukcja: 1. W małej misce rozpuść cukier w wodzie, a następnie dodaj suche drożdże. Odstaw na kilka minut, aż drożdże zaczną się pienić. 2. Do dużej misce zmieszaj mąkę i sól. Wlej drożdże i wodę. 3. Wyrabiaj ciasto, aż do momentu kiedy przestanie być klejące. Jeśli nadal takie jest możesz dodać odrobinę wody. 4. Odstaw ciasto do wyrośnięcia na około 1-2 godziny w ciepłymmiejscu, przykryte ściereczką. 5. Po wyrośnięciu ciasta, podziel je na równe kawałki i uformuj z nich kształt bułek kajzerek. 6. Wyłóż bułki na blaszce wyłożonej papierem do pieczenia. Posmaruj je jajkiem wymieszanym z mlekiem, następnie możesz posypać je niasionami lub sezamem, jeśli chcesz. 7. Piecz bułki w piekarniku nagrzanym do 200 stopni Celcjusza przez około 15-20 minut lub do momentu, kiedy staną się złociste. 8. Wyjmij bułki z piekarnika i pozostaw je do ostygnięcia na kracie. 9. Gotowe!!</p>
+<div>
 
-   <p> Podsumowując, bułki są doskonałym pomysłem na każdy posiłek, można przyrządzić je na wiele sposobów i tak naprawdę nie można ich nie lubić!!!</p>
+    <p id="head"><b> 𝕻𝖑𝖆𝖞𝖇𝖔𝖎 𝕮𝖆𝖗𝖙𝖎</b></p>
 
-   <a href="https://pl.wikipedia.org/wiki/Bu%C5%82ka">Kliknij, żeby przeczytać jeszcze więcej o bułkach!  (artykuł z Wikipedii) </a>
+    <table>
+        <tr>
+            <td>
+                <img src="bulka.jpeg" width="300" align="left">
+            </td>
+        </td>
+        <img src="bulka2.jpeg" width="260" align="right">
+            <tr></tr>
+    
+    </table>
+
+   <p> Playboi Carti, znany również jako Jordan Terrell Carter, to artysta, który wyłonił się na scenie muzycznej jako jeden z najbardziej innowacyjnych raperów swojego pokolenia. Jego muzyka jest połączeniem trapu, mumble rapu i eksperymentalnych brzmień, co przyniosło mu ogromną popularność wśród fanów muzyki hip-hop. Jego debiutancki mixtape "Playboi Carti" oraz album "Die Lit" zyskały uznanie za świeże podejście do gatunku. Kolejny album, "Whole Lotta Red," był jednym z najbardziej oczekiwanych i kontrowersyjnych wydawnictw. Carti słynie z charakterystycznego, powtarzalnego flow, który stał się jego znakiem rozpoznawczym.
+    <p>Jego teksty często oscylują wokół tematów takich jak moda, luksus, narkotyki i styl życia celebryty. Playboi Carti wyznacza trendy nie tylko muzyczne, ale także modowe, będąc ikoną stylu dla wielu fanów. Jego współpraca z innymi artystami, takimi jak Lil Uzi Vert czy Travis Scott, przyniosła mu jeszcze większe uznanie w przemyśle muzycznym.</p>
+
+   <p> Playboi Carti nieustannie ewoluuje artystycznie, eksperymentując z brzmieniami i wciąż zaskakując swoją publiczność. Jego wpływ na kulturę muzyczną jest niezaprzeczalny, a jego miejsce jako jednego z najbardziej wpływowych raperów współczesności jest solidnie ugruntowane</p>
+
+   <a href="https://pl.wikipedia.org/wiki/Playboi_Carti">Kliknij, żeby przeczytać jeszcze więcej o Cartim!  (artykuł z Wikipedii) </a>
 
   
+   </div>
+
 </body>
 </html>
 
